--- a/IKRPG/res/layout/frag_choice_list.xml
+++ b/IKRPG/res/layout/frag_choice_list.xml
@@ -4,13 +4,16 @@
     android:orientation="vertical">
     
 	<TextView
+		android:id="@+id/listChoiceTitle"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:text="Pick yo race!"
+		android:padding="15sp"
+		android:textSize="25sp"
+		android:text="Make a choice!"
 		/>
 	
 	<ListView
-		android:id="@+id/raceList"
+		android:id="@+id/listChoiceList"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		/>
