--- a/IKRPG/res/layout/frag_choose_fluff.xml
+++ b/IKRPG/res/layout/frag_choose_fluff.xml
@@ -1,6 +1,124 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent" >
+
+<LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
     
+	<LinearLayout
+		style="@style/inputRowLayout" >
+	
+		<TextView
+			style="@style/inputLabel"
+			android:text="Name:" />
+			
+		<EditText
+			style="@style/inputItem"
+			android:id="@+id/nameInput"/>
+		
+	</LinearLayout>
+	
+	<LinearLayout
+		style="@style/inputRowLayout" >
+
+		<TextView
+			style="@style/inputLabel"
+			android:text="Sex:" />
+
+		<RadioGroup
+			style="@style/inputItem"
+			android:id="@+id/sexChoiceGroup"
+			android:orientation="vertical">
+			<RadioButton 
+				android:id="@+id/sexChoiceMale"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:text="Male" />
+			<RadioButton 
+				android:id="@+id/sexChoiceFemale"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:text="Female" />
+		</RadioGroup>
+
+	</LinearLayout>
+	
+	<LinearLayout
+		style="@style/inputRowLayout" >
+
+		<TextView
+			style="@style/inputLabel"
+			android:text="Defining characteristics:" />
+
+		<EditText
+			style="@style/inputItem"
+			android:id="@+id/characteristicsInput"/>
+
+	</LinearLayout>
+	
+	<LinearLayout
+		style="@style/inputRowLayout" >
+
+		<TextView
+			style="@style/inputLabel"
+			android:text="Height:" />
+
+		<EditText
+			style="@style/inputItem"
+			android:id="@+id/heightInput"/>
+
+	</LinearLayout>
+	
+	<LinearLayout
+		style="@style/inputRowLayout" >
+
+		<TextView
+			style="@style/inputLabel"
+			android:text="Weight:" />
+
+		<EditText
+			style="@style/inputItem"
+			android:id="@+id/weightInput"/>
+
+	</LinearLayout>
+	
+	<LinearLayout
+		style="@style/inputRowLayout" >
+
+		<TextView
+			style="@style/inputLabel"
+			android:text="Faith:" />
+
+		<EditText
+			style="@style/inputItem"
+			android:id="@+id/faithInput"/>
+
+	</LinearLayout>
+	
+	<LinearLayout
+		style="@style/inputRowLayout" >
+
+		<TextView
+			style="@style/inputLabel"
+			android:text="Owning player:" />
+
+		<EditText
+			style="@style/inputItem"
+			android:id="@+id/owningPlayerInput"/>
+
+	</LinearLayout>
+	
+	<LinearLayout
+		style="@style/inputRowLayout"
+		android:paddingLeft="30dp">
+		<Button
+			android:id="@+id/fluffDoneButton"
+			android:layout_width="150dp"
+			android:layout_height="wrap_content"
+			android:text="Done" />
+	</LinearLayout>
+	
 </LinearLayout>
+</ScrollView>
