--- a/IKRPG/res/layout/frag_choice_list.xml
+++ b/IKRPG/res/layout/frag_choice_list.xml
@@ -4,11 +4,11 @@
     android:orientation="vertical">
     
 	<TextView
+		style="@style/textLabel"
 		android:id="@+id/listChoiceTitle"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:padding="15sp"
-		android:textSize="25sp"
 		android:text="Make a choice!"
 		/>
 	
