--- a/IKRPG/res/values/styles.xml
+++ b/IKRPG/res/values/styles.xml
@@ -10,8 +10,11 @@
 		<item name="android:paddingBottom">15dp</item>
 	</style>
 	
-	<style name="inputLabel">
-		<item name="android:textSize">24sp</item>
+	<style name="textLabel">
+		<item name="android:textSize">20sp</item>
+	</style>
+	
+	<style name="textLabel.inputLabel">
 		<item name="android:layout_width">0dp</item>
 		<item name="android:layout_height">fill_parent</item>
 		<item name="android:layout_weight">1</item>
