--- a/IKRPG/res/layout/frag_choose_advancement_points.xml
+++ b/IKRPG/res/layout/frag_choose_advancement_points.xml
@@ -3,10 +3,17 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
     
+	<TextView
+		style="@style/textLabel"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:text="Choose three stats to boost!" />
+	
 	<ListView
 		android:id="@+id/chooseAdvancementPointsList"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" />
+		android:layout_height="0dp"
+		android:layout_weight="1"/>
 	
 	<Button
 		android:id="@+id/chooseAdvancementPointsSubmit"
