--- a/IKRPG/res/layout/list_item_choose_advancement_points.xml
+++ b/IKRPG/res/layout/list_item_choose_advancement_points.xml
@@ -1,27 +1,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+	android:padding="15dp">
     
 	<TextView
+		style="@style/textLabel"
 		android:id="@+id/chooseAdvancementPointsStatNameLabel"
+		android:gravity="center_vertical"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+		android:layout_height="fill_parent"
+		android:layout_weight="10" />
 	
-	<Button
-		android:id="@+id/chooseAdvancementPointsIncrementButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="+" />
-	
-	<Button
-		android:id="@+id/chooseAdvancementPointsDecrementButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="-"/>
-	
-	<TextView
-		android:id="@+id/chooseAdvancementPointsStatValueLabel"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+	<LinearLayout
+		android:layout_width="300dp"
+		android:layout_height="wrap_content" >
+					
+		<Button
+			android:id="@+id/chooseAdvancementPointsIncrementButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="+" />
+		
+		<Button
+			android:id="@+id/chooseAdvancementPointsDecrementButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="15dp"
+			android:text="-"/>
+		
+		<TextView
+			style="@style/textLabel"
+			android:gravity="center_vertical"
+			android:id="@+id/chooseAdvancementPointsStatValueLabel"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:paddingLeft="15dp" />
+
+	</LinearLayout>
 </LinearLayout>
