--- a/IKRPG/res/layout/list_item_choose_advancement_points.xml
+++ b/IKRPG/res/layout/list_item_choose_advancement_points.xml
@@ -8,13 +8,15 @@
 		style="@style/textLabel"
 		android:id="@+id/chooseAdvancementPointsStatNameLabel"
 		android:gravity="center_vertical"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="fill_parent"
-		android:layout_weight="10" />
+		android:layout_weight="5" />
 	
 	<LinearLayout
-		android:layout_width="300dp"
-		android:layout_height="wrap_content" >
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:minWidth="100dp"
+		android:layout_weight="0">
 					
 		<Button
 			android:id="@+id/chooseAdvancementPointsIncrementButton"
@@ -26,7 +28,7 @@
 			android:id="@+id/chooseAdvancementPointsDecrementButton"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginLeft="15dp"
+			android:layout_marginLeft="5dp"
 			android:text="-"/>
 		
 		<TextView
@@ -35,7 +37,8 @@
 			android:id="@+id/chooseAdvancementPointsStatValueLabel"
 			android:layout_width="fill_parent"
 			android:layout_height="fill_parent"
-			android:paddingLeft="15dp" />
+			android:paddingLeft="15dp"
+			android:paddingRight="5dp" />
 
 	</LinearLayout>
 </LinearLayout>
