--- a/IKRPG/res/layout/act_main.xml
+++ b/IKRPG/res/layout/act_main.xml
@@ -7,7 +7,8 @@
 	<ProgressBar
 		style="@android:style/Widget.ProgressBar.Large"
 		android:id="@+id/loadingCharacterSpinner"
-		android:gravity="center"
+		android:layout_centerVertical="true"
+		android:layout_centerHorizontal="true"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" />
 	
