--- a/IKRPG/res/layout/act_character_home.xml
+++ b/IKRPG/res/layout/act_character_home.xml
@@ -2,10 +2,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
-    
-	<TextView
-		android:id="@+id/char_home_name"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+   
+	<ListView
+		android:id="@+id/char_home_actions"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent" />
 	
 </LinearLayout>
