--- a/IKRPG/res/values/careerStrings.xml
+++ b/IKRPG/res/values/careerStrings.xml
@@ -75,16 +75,16 @@
     <string name="soldier_name">Soldier</string>
     <string name="soldier_desc">Desc</string>
 
-    <string name="fire_sorcerer_name">Fire Sorceror</string>
+    <string name="fire_sorcerer_name">Sorceror (Fire)</string>
     <string name="fire_sorcerer_desc">Desc</string>	
 
-	<string name="ice_sorcerer_name">Ice Sorceror</string>
+	<string name="ice_sorcerer_name">Sorceror (Ice)</string>
     <string name="ice_sorcerer_desc">Desc</string>
 	
-	<string name="storm_sorcerer_name">Storm Sorceror</string>
+	<string name="storm_sorcerer_name">Sorceror (Storm)</string>
     <string name="storm_sorcerer_desc">Desc</string>
 	
-	<string name="stone_sorcerer_name">Stone Sorceror</string>
+	<string name="stone_sorcerer_name">Sorceror (Stone)</string>
     <string name="stone_sorcerer_desc">Desc</string>
 	
     <string name="spy_name">Spy</string>
