--- a/IKRPG/res/layout/frag_choice_list.xml
+++ b/IKRPG/res/layout/frag_choice_list.xml
@@ -16,7 +16,7 @@
 	<ListView
 		android:id="@+id/listChoiceList"
 		android:layout_width="fill_parent"
-		android:layout_height="0sp"
+		android:layout_height="0dp"
 		android:layout_weight="1"/>
 
 	<Button
