--- a/IKRPG/res/layout/frag_choice_list.xml
+++ b/IKRPG/res/layout/frag_choice_list.xml
@@ -24,7 +24,7 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="Confirm"
-		android:visibility="gone"/>
+		android:visibility="visible"/>
 
 </LinearLayout>
 
